--- a/app/css/style.css
+++ b/app/css/style.css
@@ -13,4 +13,76 @@ html {
 body {
     font-family: 'Public Sans', sans-serif;
     line-height: 1.3;
+    margin: 0;
 }
+
+/*--NAV--*/
+
+nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1110px;
+    height: 80px;
+    margin: 0 auto;
+    padding: 1rem 1.5rem;
+}
+
+nav .logo img {
+    width: 9rem;
+    height: 1.375rem;
+}
+
+nav .nav-links a {
+    color: var(--grayishBlue);
+    text-decoration: none;
+    margin: 0 2rem 0 0;
+    font-size: 0.875rem;
+    font-weight: 300;
+    position: relative;
+    transition: color 200ms;
+}
+
+nav .nav-links a:hover {
+    color: var(--darkBlue);
+}
+
+nav .nav-links a:last-of-type{
+    margin: 0 0 0 0;
+}
+
+nav .nav-links a::before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 5px;
+    left: 0;
+    right: 0;
+    bottom: -31px;
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
+    background: linear-gradient(90deg, var(--limeGreen),var(--brightCyan));
+}
+nav .nav-links a:hover::before {
+    opacity: 1;
+}
+
+nav .button {
+    width: 10rem;
+    height: 3rem;
+    padding: 1rem;
+    border-radius: 3rem;
+    font-size: 0.875rem;
+    color: var(--veryLightGray);
+    text-decoration: none;
+    text-align: center;
+    background: linear-gradient(90deg, var(--limeGreen),var(--brightCyan));
+    opacity: 1;
+    transition: opacity 200ms ease-in-out;
+}
+
+nav .button:hover {
+    opacity: 0.7;
+}
+
